--- a/tmpl/form.html
+++ b/tmpl/form.html
@@ -3,10 +3,10 @@
 		<title>Connection Checker</title>
 	</head>
 	<body>
-		<p>Default timeout is 10 seconds</p>
+		<p>Default timeout is 5 seconds</p>
 		<form action="/" method="POST">
 			<label for="destination">Destination (hostname/ip:port):</label><br>
-			<input type="text" id="destination" name="destination"><br>
+			<input type="text" id="destination" name="destination">
 			<input type="submit" value="Check">
 		</form>
 
